Updated-in transit code

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,12 +11,12 @@
   </welcome-file-list>
   <servlet>
     <description></description>
-    <display-name>HomeControllerServlet</display-name>
-    <servlet-name>HomeControllerServlet</servlet-name>
-    <servlet-class>tech.codecozy.app.HomeControllerServlet</servlet-class>
+    <display-name>AccountsServlet</display-name>
+    <servlet-name>AccountsServlet</servlet-name>
+    <servlet-class>tech.codecozy.app.AccountsServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>HomeControllerServlet</servlet-name>
-    <url-pattern>/HomeControllerServlet</url-pattern>
+    <servlet-name>AccountsServlet</servlet-name>
+    <url-pattern>/AccountsServlet</url-pattern>
   </servlet-mapping>
 </web-app>
