--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,23 @@
 		    <artifactId>mssql-jdbc</artifactId>
 		    <version>7.0.0.jre8</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+				
+				
 
     </dependencies>
     <properties>
@@ -40,6 +57,11 @@
 	</properties>
     <build>
         <finalName>MavenWebApp</finalName>
+        <resources>
+		     <resource>
+		       	<directory>public</directory>
+		     </resource>
+	   </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
